welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:35: error: Boolean does not take parameters
      else (estFaceMur()){
                         ^